--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,19 @@
         android:theme="@style/Theme.PlantShop"
         tools:targetApi="31">
         <activity
+            android:name=".activity_DangNhap"
+            android:exported="false" />
+        <activity
+            android:name=".activity_DangKy"
+            android:exported="false" />
+        <activity
             android:name=".activity_welcome"
-            android:theme="@style/Theme.App.FullScreen"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true"
+            android:theme="@style/Theme.App.FullScreen" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.App.FullScreen"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.App.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
