Thêm màn hình quên mật khẩu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,26 @@
         android:theme="@style/Theme.PlantShop"
         tools:targetApi="31">
         <activity
-            android:name=".activity.Activity_DangNhap"
-            android:theme="@style/Theme.App.FullScreen"
+            android:name=".activity.Activity_NewPass"
             android:exported="false" />
         <activity
-            android:name=".activity.Activity_DangKy"
-            android:theme="@style/Theme.App.FullScreen"
+            android:name=".activity.Activity_Input_Code"
             android:exported="false" />
+        <activity
+            android:name=".activity.Activity_ForgotPass"
+            android:exported="false" />
+        <activity
+            android:name=".activity.Activity_DangNhap"
+            android:exported="false"
+            android:theme="@style/Theme.App.FullScreen" />
+        <activity
+            android:name=".activity.Activity_DangKy"
+            android:exported="false"
+            android:theme="@style/Theme.App.FullScreen" />
         <activity
             android:name=".activity.Activity_Welcome"
             android:exported="true"
-            android:theme="@style/Theme.App.FullScreen" >
+            android:theme="@style/Theme.App.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,9 +42,7 @@
         <activity
             android:name=".activity.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.App.FullScreen">
-
-        </activity>
+            android:theme="@style/Theme.App.FullScreen" />
 
         <meta-data
             android:name="preloaded_fonts"
