--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
+        android:name=".config.ConfigNotification"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -14,12 +18,17 @@
         tools:targetApi="31">
         <activity
             android:name=".activity.Activity_NewPass"
+            android:theme="@style/Theme.App.FullScreen"
             android:exported="false" />
         <activity
             android:name=".activity.Activity_Input_Code"
-            android:exported="false" />
+            android:theme="@style/Theme.App.FullScreen"
+            android:exported="true" >
+
+        </activity>
         <activity
             android:name=".activity.Activity_ForgotPass"
+            android:theme="@style/Theme.App.FullScreen"
             android:exported="false" />
         <activity
             android:name=".activity.Activity_DangNhap"
