--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:name=".config.ConfigNotification"
+        android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -17,19 +17,20 @@
         android:theme="@style/Theme.PlantShop"
         tools:targetApi="31">
         <activity
-            android:name=".activity.Activity_NewPass"
-            android:theme="@style/Theme.App.FullScreen"
+            android:name=".Activity_AddSanPham"
             android:exported="false" />
+        <activity
+            android:name=".activity.Activity_NewPass"
+            android:exported="false"
+            android:theme="@style/Theme.App.FullScreen" />
         <activity
             android:name=".activity.Activity_Input_Code"
-            android:theme="@style/Theme.App.FullScreen"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true"
+            android:theme="@style/Theme.App.FullScreen"></activity>
         <activity
             android:name=".activity.Activity_ForgotPass"
-            android:theme="@style/Theme.App.FullScreen"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.App.FullScreen" />
         <activity
             android:name=".activity.Activity_DangNhap"
             android:exported="false"
