--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PlantShop"
         tools:targetApi="31">
-        <activity
-            android:name=".Activity_AddSanPham"
-            android:exported="false" />
+
         <activity
             android:name=".activity.Activity_NewPass"
             android:exported="false"
@@ -52,7 +50,9 @@
         <activity
             android:name=".activity.MainActivity"
             android:exported="true"
-             />
+             >
+
+        </activity>
 
         <meta-data
             android:name="preloaded_fonts"
