--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,9 @@
         android:name=".config.ConfigNotification"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:fullBackupContent="@xml/backup_rules" android:icon="@drawable/logoplant"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logoplant"
         android:supportsRtl="true"
         android:theme="@style/Theme.PlantShop"
         tools:targetApi="31">
